--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@types/jquery": "^3.5.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "faker": "^4.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "json-server": "^0.16.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
